[package]
name = "dns-proxy"
version = "0.1.0"
authors = ["Revertron <rev@revertron.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.7", features = ["os-poll", "net"] }
trust-dns-proto = "0.20.2"